--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^7.8.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
