--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-date-pickers": "^7.8.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
