--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "next": "14.2.4",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18"
   },
